# libpwrm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug  build-debug.sh  pwrm
data/: ceramic-schema.json  report-base.json  report-base2.json  report-ceramic-schema.json
src/: CMakeLists.txt  devlist.cpp  lib.cpp  lib.h  main.cpp  subprocess.hpp
src/CMake/: Setup3rdParty.cmake
src/co2.storage/: .env.example  co2.storage.js  package-lock.json  package.json
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  cpu_rapl_device.cpp  intel_cpus.cpp  intel_gpu.cpp
src/cpu/rapl/: rapl_interface.cpp
src/data/: ceramic-schema.json  report-base.json
src/devices/: CMakeLists.txt  ahci.cpp  devfreq.cpp  devfreq.h  device.cpp  network.cpp  runtime_pm.cpp  usb.cpp
src/devices/scripts/: watttime.sh
src/measurement/: CMakeLists.txt  measurement.cpp  measurement.h
src/nvidia/: CMakeLists.txt  CMakeLists.txt.foo  nvml_power.cpp  nvml_power.h
src/parameters/: CMakeLists.txt
src/perf/: CMakeLists.txt  perf.cpp
src/process/: CMakeLists.txt  do_process.cpp
src/reporting/: reporting.cpp  reporting.h
src/traceevent/: CMakeLists.txt
